--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 
-<title>ENSpunks.eth<</title>
+<title>mrm1k.eth<</title>
 <link rel="shortcut icon" href="profile.png">
 
-<!--ENSpunks.eth-->
+<!--mrm1k.eth-->
 
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
@@ -57,7 +57,7 @@ function myFunction() {
 <div id="content">
       
 <nav>
-<div class="animated_rainbow_1"><b>ENSpunks.eth</b>
+<div class="animated_rainbow_1"><b>mrm1k.eth</b>
 
 <ul>
 <a href="https://twitter.com/enspunks"><img src="twitter.png" alt="Twitter" align="right" style="max-height: 40px; height: auto; width:auto;padding-right: 15%;"></a></li>
@@ -96,7 +96,7 @@ function myFunction() {
 
 <div class="divider"></div>
 <div class="about">
-<h5>ENSpunks.eth</h5>
+<h5>mrm1k.eth</h5>
 <h5>🏴‍☠️</h5>
 </div>
 </footer>
