--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ function myFunction() {
 <div class="animated_rainbow_1"><b>mrm1k.eth</b>
 
 <ul>
-<a href="https://twitter.com/enspunks"><img src="twitter.png" alt="Twitter" align="right" style="max-height: 40px; height: auto; width:auto;padding-right: 15%;"></a></li>
+<a href="https://twitter.com/mrm1k_eth"><img src="twitter.png" alt="Twitter" align="right" style="max-height: 40px; height: auto; width:auto;padding-right: 15%;"></a></li>
 </ul>
 <ul>
 <a href="https://www.ens.vision/0x/0x671028A812aB5F2feEb8982ac23B20708517C1fF"><img src="vision.png" alt="ENS Vision" align="right" style="max-height: 40px; height: auto; width:auto;padding-right: 15%;"></a></li>
