--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>mrm1k.eth<</title>
 <link rel="shortcut icon" href="profile.png">
 
-<!--mrm1k.eth-->
+<!--mrm1k.eth was here-->
 
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
@@ -86,7 +86,7 @@ function myFunction() {
 <div></div>
 </br>
 <div class="button-wrapper"> 
-<a id="app-store-button" href="https://app.ens.domains/name/enspunks.eth/details">
+<a id="app-store-button" href="https://app.ens.domains/name/mrm1k.eth/details">
 <div></div>
 </a></div>
        
@@ -97,7 +97,7 @@ function myFunction() {
 <div class="divider"></div>
 <div class="about">
 <h5>mrm1k.eth</h5>
-<h5>🏴‍☠️</h5>
+<h5>🥳</h5>
 </div>
 </footer>
 </div>    
